--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My Weather App</h1>
+    <h1>whats wet?</h1>
+
+    <!--jQuery library from codepen-->
     <script src=https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js></script>
     
+    <!--weather plugin-->
+    <script src=https://cdnjs.cloudflare.com/ajax/libs/jquery.simpleWeather/3.1.0/jquery.simpleWeather.min.js></script>
+
+    <!--our scripts-->
+    <script src="js/scripts.js"></script>    
+
 </body>
 </html>
