--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>whats wet?</h1>
+    <h1>wuts wet?</h1>
+    
+    <ul>
+        <li class="image">
+            <img src="" alt="">
+        </li>
+        <li class="city">City</li>
+        <li class="temp">Temp</li>
+        <li class="time">Time</li>
+      </ul>
 
     <!--jQuery library from codepen-->
     <script src=https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js></script>
