three city added
three city added to

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>wuts wet?</h1>
-    
+
+<div id="primary">
     <ul>
         <li class="image">
             <img src="" alt="">
@@ -17,7 +18,30 @@
         <li class="temp">Temp</li>
         <li class="time">Time</li>
       </ul>
+</div>
 
+<div id="secondary">
+    <ul>
+        <li class="image">
+            <img src="" alt="">
+        </li>
+        <li class="city">City</li>
+        <li class="temp">Temp</li>
+        <li class="time">Time</li>
+      </ul>
+</div>
+
+<div id="geolocation">
+    <ul>
+        <li class="image">
+            <img src="" alt="">
+        </li>
+        <li class="city">City</li>
+        <li class="temp">Temp</li>
+        <li class="time">Time</li>
+      </ul>
+      <button>Get Location</button>
+</div>
     <!--jQuery library from codepen-->
     <script src=https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js></script>
     
